- переработал чуть дизайн и концепцию

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,7 @@
     <string name="task_edit">Редактировать задачу</string>
     <string name="task_save_task">Сохранить задачу</string>
     <string name="task_save_changes">Сохранить изменения</string>
+
+    <string name="all_tasks">%1$s \nAll tasks</string>
+    <string name="completed_tasks">%1$s\nCompleted tasks</string>
 </resources>
