--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,51 +1,48 @@
 <resources>
     <string name="app_name">ProjectStages</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="task_types">
-        <item>Выполненный</item>
-        <item>В работе</item>
-        <item>В размышлении</item>
+        <item>Completed</item>
+        <item>Active</item>
+        <item>Thinking</item>
     </string-array>
 
     <string name="ok">OK</string>
-    <string name="add">Добавить</string>
-    <string name="cancel">Отмена</string>
-    <string name="completed">Завершено</string>
-    <string name="error">Ошибка</string>
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="completed">Completed</string>
+    <string name="error">Error</string>
 
-    <string name="project_subtitle">Список проектов</string>
-    <string name="project_success_add_title">Проект добавлен</string>
-    <string name="project_success_add_message">Успешного выполнения задач!</string>
-    <string name="project_error_add_title">Ошибка добавления проекта</string>
-    <string name="project_error_add_message">"Возможно было указано неуникальное название"</string>
-    <string name="project_add_category_title">Добавление категории\n\n</string>
-    <string name="project_add_category_message">Введите новое уникальное название проекта не длиннее 20 символов</string>
-    <string name="project_name">Название проекта</string>
+    <string name="project_success_add_title">Project added</string>
+    <string name="project_success_add_message">Successful completion of tasks!</string>
+    <string name="project_error_add_title">Error adding project</string>
+    <string name="project_error_add_message">Perhaps a non-unique name was written</string>
+    <string name="project_add_category_title">Adding a category\n\n</string>
+    <string name="project_add_category_message">Enter a new unique project name no longer than 20 characters</string>
+    <string name="project_name">Project name</string>
 
-    <string name="tasks_list_empty">Список задач пуст</string>
-    <string name="tasks_list_error">Ошибка получения списка задач</string>
+    <string name="tasks_list_empty">The task list is empty</string>
+    <string name="tasks_list_error">Error getting task list</string>
 
-    <string name="task_add">Добавить задачу</string>
-    <string name="task_add_error">Не удалось добавить задачу</string>
-    <string name="task_update_error">Не удалось обновить задачу</string>
-    <string name="task_edit">Редактировать задачу</string>
+    <string name="task_add">Add task</string>
+    <string name="task_add_error">Failed to add task</string>
+    <string name="task_update_error">Failed to update task</string>
+    <string name="task_edit">Edit task</string>
     <string name="task_save_task">Save task</string>
     <string name="task_save_changes">Save changes</string>
 
-    <string name="task_delete_dialog">Вы действительно хотите удалить задачу?</string>
+    <string name="task_delete_dialog">Are you want to delete the task?</string>
 
     <string name="all_tasks">%1$s \nAll tasks</string>
     <string name="completed_tasks">%1$s\nCompleted tasks</string>
 
-    <string name="delete_title">Удаление</string>
-    <string name="delete_message">Вы действительно хотите удалить проект "%1$s"?</string>
-    <string name="delete_success">Проект успешно удален</string>
-    <string name="delete_error">Ошибка удаления проекта</string>
+    <string name="delete_title">Deleting</string>
+    <string name="delete_message">Are you want to delete the project \"%1$s\"?</string>
+    <string name="delete_success">Project deleted successfully</string>
+    <string name="delete_error">Project deletion error</string>
 
-    <string name="update_success">Проект успешно изменен</string>
-    <string name="update_error">Ошибка изменения проекта</string>
+    <string name="update_success">Project successfully changed</string>
+    <string name="update_error">Project change error</string>
 
-    <string name="project_edit_category_title">Изменение категории\n\n</string>
-    <string name="edit">Изменить</string>
+    <string name="project_edit_category_title">Change category\n\n</string>
+    <string name="edit">Edit</string>
 </resources>
