--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,6 +31,7 @@
     <string name="task_edit">Edit task</string>
     <string name="task_save_task">Save task</string>
     <string name="task_save_changes">Save changes</string>
+    <string name="task_open_error">Failed to open task</string>
 
     <string name="task_delete_dialog">Are you want to delete the task?</string>
 
