--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,5 @@
 
     <string name="project_edit_category_title">Edit category\n\n</string>
     <string name="edit">Edit</string>
+    <string name="title_activity_task_compose">TaskComposeActivity</string>
 </resources>
